Fix some alignment issues with the post template on mobile

--- a/site/src/css/components/page.css
+++ b/site/src/css/components/page.css
@@ -38,6 +38,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   max-width: 62em;
+  width: 100%;
 }
 
 /* The following styles apply to content generated by rst2html2, and do not
